Fixed reset password not working + added link to edit admin accounts
You will now be taken to the login screen to reset your password when clicking this in the side table
In the admin accounts table is now a link which will bring you to the auth0 accounts db

--- a/AdminPanel/src/app/pages/admin-accounts/admin-accounts.component.html
+++ b/AdminPanel/src/app/pages/admin-accounts/admin-accounts.component.html
@@ -1,1 +1,2 @@
-<p>admin-accounts works!</p>
+<h2>Admin Accounts</h2>
+<p>Click <a  target="_blank" href="https://manage.auth0.com/dashboard/eu/citygo/users">here</a> to go to the admin accounts database.</p>
