--- a/AdminPanel/src/app/pages/tables/challenges-table/challenges-table.component.html
+++ b/AdminPanel/src/app/pages/tables/challenges-table/challenges-table.component.html
@@ -17,6 +17,7 @@
                     <td><label class="label">Task</label></td>
                     <td><label class="label">Question</label></td>
                     <td><label class="label">Answer</label></td>
+                    <td><label class="label">Score</label></td>
                     <td><label class="label">Rewards</label></td>
                     <td></td>
                 </tr>
@@ -33,6 +34,7 @@
                     </td>
                     <td><input nbInput fullWidth type="text" name="answer" value={{challenge.answer}} [(ngModel)]="challenge.answer">
                     </td>
+                    <td><input nbInput fullWidth type="number" name="score" value={{challenge.score}} [(ngModel)]="challenge.score">
                     <td><button nbButton outline fullWidth (click)="openItemSelector(challenge.items)">Edit</button></td>
                     <td><button nbButton fullWidth outline status="success" (click)="updateChallenge(challenge)">Save</button>
                     </td>
@@ -56,6 +58,7 @@
                     <td><label class="label">Task</label></td>
                     <td><label class="label">Question</label></td>
                     <td><label class="label">Answer</label></td>
+                    <td><label class="label">Score</label></td>
                     <td><label class="label">Rewards</label></td>
                     <td></td>
                 </tr>
@@ -66,9 +69,10 @@
                 <td><input nbInput fullWidth type="text" name="task" [(ngModel)]="task"></td>
                 <td><input nbInput fullWidth type="text" name="questionChallenge" [(ngModel)]="questionChallenge"></td>
                 <td><input nbInput outline fullWidth type="text" name="answer" [(ngModel)]="answer"></td>
+                <td><input nbInput fullWidth type="number" name="score" [(ngModel)]="score"></td>
                 <td><button nbButton outline fullWidth (click)="openItemSelector()">Add</button></td>
                 <td><button nbButton outline status="success"
-                        (click)="createChallenge(name, task, questionChallenge, answer)">Create</button>
+                        (click)="createChallenge(name, task, questionChallenge, answer, score)">Create</button>
                 </td>
             </tbody>
         </table>
