--- a/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
+++ b/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
@@ -64,7 +64,7 @@
                 <td><input nbInput fullWidth type="text" name="name" [(ngModel)]="name"></td>
                 <td><input nbInput fullWidth type="text" name="rarity" [(ngModel)]="rarity"></td>
                 <td><input nbInput fullWidth type="text" name="picture" [(ngModel)]="picture"></td>
-                <td><button nbButton outline fullWidth (click)="openNewLocationDialog()">Edit</button></td>
+                <td><button nbButton outline fullWidth (click)="openNewLocationDialog()">Add</button></td>
                 <td><button nbButton outline status="success"
                         (click)="createItem(name, rarity, picture)">Create</button>
                 </td>
