Added online field and location editor for users to the panel

--- a/AdminPanel/src/app/pages/tables/users-table/users-table.component.html
+++ b/AdminPanel/src/app/pages/tables/users-table/users-table.component.html
@@ -18,6 +18,8 @@
                     <td><label class="label">Email</label></td>
                     <td><label class="label">Balls</label></td>
                     <td><label class="label">Score</label></td>
+                    <td><label class="label">Online</label></td>
+                    <td><label class="label">Location</label></td>
                     <td><label class="label">Items</label></td>
                     <td><label class="label">Challenges</label></td>
                     <td></td>
@@ -36,6 +38,10 @@
                     <td><input nbInput fullWidth type="number" name="balls" value={{user.balls}} [(ngModel)]="user.balls">
                     </td>
                     <td><input nbInput fullWidth type="number" name="score" value={{user.score}} [(ngModel)]="user.score">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="online" value={{user.online}} [(ngModel)]="user.online">
+                    </td>
+                    <td><button nbButton fullWidth outline (click)="openEditLocationDialog(item)">Edit</button>
                     </td>
                     <td><button nbButton fullWidth outline (click)="openItemSelector(user.usersItems)">Edit</button>
                     </td>
@@ -66,6 +72,8 @@
                     <td><label class="label">Email</label></td>
                     <td><label class="label">Balls</label></td>
                     <td><label class="label">Score</label></td>
+                    <td><label class="label">Online</label></td>
+                    <td><label class="label">Location</label></td>
                     <td><label class="label">Items</label></td>
                     <td><label class="label">Challenges</label></td>
                     <td></td>
@@ -78,10 +86,12 @@
                 <td><input nbInput fullWidth type="text" name="email" [(ngModel)]="email"></td>
                 <td><input nbInput fullWidth type="number" name="balls" [(ngModel)]="balls"></td>
                 <td><input nbInput fullWidth type="number" name="score" [(ngModel)]="score"></td>
+                <td><input nbInput fullWidth type="text" name="online" [(ngModel)]="online"></td>
+                <td><button nbButton outline fullWidth (click)="openNewLocationDialog()">Add</button></td>
                 <td><button nbButton fullWidth outline (click)="openItemSelector()">Add</button></td>
                 <td><button nbButton fullWidth outline (click)="openChallengeSelector()">Add</button></td>
                 <td><button nbButton outline status="success"
-                        (click)="createUser(name, username, email, balls, score)">Create</button>
+                        (click)="createUser(name, username, email, balls, score, online)">Create</button>
                 </td>
             </tbody>
         </table>
