Admin panel fixed error when successful request + fix item loc editor

--- a/AdminPanel/src/app/pages/tables/users-table/users-table.component.html
+++ b/AdminPanel/src/app/pages/tables/users-table/users-table.component.html
@@ -41,7 +41,7 @@
                     </td>
                     <td><input nbInput fullWidth type="text" name="online" value={{user.online}} [(ngModel)]="user.online">
                     </td>
-                    <td><button nbButton fullWidth outline (click)="openEditLocationDialog(item)">Edit</button>
+                    <td><button nbButton fullWidth outline (click)="openEditLocationDialog(user)">Edit</button>
                     </td>
                     <td><button nbButton fullWidth outline (click)="openItemSelector(user.usersItems)">Edit</button>
                     </td>
