Created welcome page

--- a/AdminPanel/src/app/pages/dashboard/dashboard.component.html
+++ b/AdminPanel/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-
+<h2>Dashboard</h2>
+<br>
+<nb-alert status="success" closable>
+    You have been successfully authenticated!
+</nb-alert>
+<nb-card>
+    <nb-card-body>
+        <h2>CityGo Admin Panel</h2>
+        <p>Welcome to the admin panel!</p> 
+        <p>Here you can manage all sights, items, challenges and users. It supports most important api calls in a easy to use gui. 
+            <br>Navigate trough the navigation at the left of the screen to get started.</p>
+    </nb-card-body>
+</nb-card>
