Refactored map component + fixed panel typo
Fixed sights alerts not popping up every-time

--- a/AdminPanel/src/app/pages/tables/challenges-table/items-dialog-component/items-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/challenges-table/items-dialog-component/items-dialog-component.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <nb-card-header>Challenges selector</nb-card-header>
+    <nb-card-header>Item selector</nb-card-header>
     <nb-card-body *ngIf="items">
         <table>
             <thead>
